--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,6 @@
 <body>
 <h3>Sarafan</h3>
 <div id="app"></div>
-<script src="/js/frontend/main.js"></script>
+<script src="/frontend/src/main.js"></script>
 </body>
 </html>
